# django-integration

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yml
mosparo_django/: __init__.py  apps.py  config.py  fields.py  forms.py  widgets.py
mosparo_django/locale/: django.pot
mosparo_django/locale/de/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/et/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/fr/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/hr/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/ko/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/ta/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/tr/LC_MESSAGES/: django.mo  django.po
mosparo_django/locale/uk/LC_MESSAGES/: django.mo  django.po
mosparo_django/templates/mosparo/: box.html
tests/: test_FrontendConfig.py  test_MosparoField.py  test_MosparoForm.py  test_MosparoWidget.py
tests/django_test_project/: __init__.py  settings.py
